[gd_scene load_steps=4 format=3 uid="uid://ceec2hntrqpft"]

[ext_resource type="Texture2D" uid="uid://bl75vhg63jvvk" path="res://assets/levels/mainMenu/background.png" id="1_fsby3"]
[ext_resource type="Script" uid="uid://cbb1apc2bx3je" path="res://scripts/ui/main_menu.gd" id="1_leamy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_leamy"]
bg_color = Color(0, 0, 0, 0.733333)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_leamy")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-49, -15)
scale = Vector2(2.05285, 2.05285)
texture = ExtResource("1_fsby3")
centered = false

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 877.0
offset_top = 516.0
offset_right = 877.0
offset_bottom = 516.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1059.0
offset_top = -685.0
offset_right = -518.0
offset_bottom = -370.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 240
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 600
theme_override_constants/margin_bottom = 200

[node name="InnerBackground" type="PanelContainer" parent="Menu/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_leamy")

[node name="InnerContainer" type="VBoxContainer" parent="Menu/MarginContainer/InnerBackground"]
layout_mode = 2

[node name="Spacing" type="Control" parent="Menu/MarginContainer/InnerBackground/InnerContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayButton" type="MarginContainer" parent="Menu/MarginContainer/InnerBackground/InnerContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Button" type="Button" parent="Menu/MarginContainer/InnerBackground/InnerContainer/PlayButton"]
layout_mode = 2
theme_type_variation = &"CustomMenuButton"
text = "PLAY"

[node name="AboutButton" type="MarginContainer" parent="Menu/MarginContainer/InnerBackground/InnerContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Button" type="Button" parent="Menu/MarginContainer/InnerBackground/InnerContainer/AboutButton"]
layout_mode = 2
theme_type_variation = &"CustomMenuButton"
text = "ABOUT"

[node name="Spacing2" type="Control" parent="Menu/MarginContainer/InnerBackground/InnerContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuitButton" type="MarginContainer" parent="Menu/MarginContainer/InnerBackground/InnerContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Button" type="Button" parent="Menu/MarginContainer/InnerBackground/InnerContainer/QuitButton"]
layout_mode = 2
theme_type_variation = &"CustomMenuButton"
text = "QUIT"

[node name="Spacing3" type="Control" parent="Menu/MarginContainer/InnerBackground/InnerContainer"]
layout_mode = 2
size_flags_vertical = 3
